# rolf

./: .gitignore  Dockerfile  README.md  aimmx_reproduction.ipynb  aimmx_reproduction.py  aimmx_reproduction_dataset_generation.py  demo.py  final_results.csv  final_results_common_words.csv  final_results_common_words_only.csv  final_results_negativ_samples_added.csv  final_results_preprocessed.csv  final_results_preprocessed_general.csv  final_results_preprocessed_some_dataset.csv  final_results_pretty_good_results.csv  final_results_remov_general_structured.csv  final_results_remove_codeblocks.csv  final_results_semantic_web.csv  generate_dataset_from_somef_json.ipynb  get_links_from_awsome_lists.ipynb  methods.json  output.txt  pyproject.toml  requirements.txt  res.txt  results.csv  run_evaluates.sh  somef_train_part.json  tmp.json  tmp_awsome.json  try_models_for_somef_data.ipynb  weights.index
app/: rolf.py  tets.py  utils.py
best_test/: bert5_semantic_web_results.csv  bert_model_result_0.005.csv  bert_model_result_0.01.csv  bert_model_result_0.010.csv  bert_model_result_0.015.csv  bert_model_result_0.015.json  bert_model_result_0.02.csv  bert_model_result_0.020.csv  bert_model_result_0.025.csv  bert_model_result_0.03.csv  bert_model_result_0.030.csv  bert_model_result_0.035.csv  bert_model_result_0.035.json  bert_model_result_0.04.csv  bert_model_result_0.040.csv  bert_model_result_0.045.csv  bert_model_result_0.05.csv  bert_model_result_0.10.csv  bert_model_result_0.15.csv  bert_model_result_0.20.csv  bert_model_result_0.25.csv  bert_model_result_0.25.json  bert_model_result_0.30.csv  bert_model_result_0.35.csv  bert_model_result_0.40.csv  bert_model_result_0.45.csv  bert_model_result_0.45.json  bert_model_result_0.50.csv  bert_model_result_0.55.csv  bert_model_result_0.55.json  bert_model_result_0.60.csv  bert_model_result_0.60.json  bert_model_result_0.65.csv  bert_model_result_0.70.csv  bert_model_result_0.75.csv  bert_model_result_0.80.csv  bert_model_result_0.80.json  bert_model_result_0.85.csv  (+11 more)
(+22272 files in other folders)
