[tool.poetry]
name = "rolf"
version = "0.1.0"
description = ""
authors = ["Jenifer Tabita Ciuciu-Kiss"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.1"
tensorflow = "^2.11.0"
tensorflow-hub = "^0.12.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
logthis = "^1.0.1"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
