[tool.poetry]
name = "rolf"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.1"
tensorflow = "^2.11.0"
tensorflow-hub = "^0.12.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
logthis = "^1.0.1"
matplotlib = "^3.6.2"
regex = "^2022.10.31"
seaborn = "^0.12.2"
tokenizer = "^3.4.2"
tokenizers = "^0.13.2"
pytorch-transformers = "^1.2.0"
keras = "^2.11.0"
tensorflow-gpu = "^2.11.0"
transformers = "2.3.0"
nltk = "^3.7"
imblearn = "^0.0"
inflect = "^6.0.2"
contractions = "^0.1.73"
bs4 = "^0.0.1"
bert-for-tf2 = "^0.14.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
