[tool.poetry]
name = "rolf"
version = "0.1.0"
description = ""
authors = ["Jenifer Tabita Ciuciu-Kiss <jenifer.tabita.ciuciu.kiss@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.4"
pandas = "^1.5.1"
scikit-learn = "^1.3.2"
logthis = "^1.0.1"
matplotlib = "^3.6.2"
regex = "^2022.10.31"
seaborn = "^0.12.2"
tokenizer = "^3.4.2"
tokenizers = "^0.13.2"
nltk = "^3.7"
imblearn = "^0.0"
inflect = "^6.0.2"
contractions = "^0.1.73"
bs4 = "^0.0.1"
imbalanced-learn = "^0.11.0"
flask = "^3.0.0"
waitress = "^2.1.2"
api = "^0.0.7"
streamlit = "^1.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
